--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,9 @@ license = "MPL-2.0"
 version = "0.0.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+anyhow = "1.0.81"
 clap = { version = "4.5.2", features = ["derive"] }
+open = "5.1.2"
+tokio = { version = "1.37.0", features = ["full"] }
+tokio-modbus = "0.11.0"
