--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.81"
 clap = { version = "4.5.2", features = ["derive"] }
+hftwo = { git = "https://github.com/umi-eng/hftwo.git", version = "0.1.0" }
 open = "5.1.2"
 tokio = { version = "1.37.0", features = ["full"] }
 tokio-modbus = "0.11.0"
+uftwo = { git = "https://github.com/umi-eng/uftwo.git", version = "0.1.0" }
