--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,5 +11,5 @@ uftwo = "0.1.0"
 anyhow = "1.0.81"
 clap = { version = "4.5.2", features = ["derive"] }
 open = "5.1.2"
-tokio = { version = "1.37.0", features = ["full"] }
+tokio = { version = "1.37.0", features = ["full", "net"] }
 tokio-modbus = "0.11.0"
