--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -31,5 +31,5 @@ jobs:
         with:
           path: target
           key: ${{ runner.os }}-target-${{ hashFiles('**/Cargo.toml') }}
-      - uses: dtolnay/rust-toolchain@master
+      - uses: dtolnay/rust-toolchain@stable
       - run: cargo build --verbose --release
