add to requirements

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,7 +9,7 @@ jobs:
   ci:
     name: CI
     runs-on: ubuntu-latest
-    needs: [check]
+    needs: [check, format, clippy]
     if: always()
     steps:
       - name: Done
