add crate fields

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,9 @@
 [package]
 name = "umi"
 description = "UMI device management CLI tool"
+documentation = "https://docs.rs/crate/umi/"
+homepage = "https://umi.engineering/cli"
+repository = "https://github.com/umi-eng/cli"
 license = "MPL-2.0"
 version = "0.0.2"
 edition = "2021"
