--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ ci = "github"
 # The installers to generate for each app
 installers = ["shell", "powershell", "homebrew"]
 # A GitHub repo to push Homebrew formulas to
-tap = "umi-eng/cli"
+tap = "umi-eng/homebrew-tap"
 # Target platforms to build apps for (Rust target-triple syntax)
 targets = [
     "aarch64-apple-darwin",
