--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,4 +44,4 @@ publish-jobs = ["homebrew"]
 # Publish jobs to run in CI
 pr-run-mode = "plan"
 # Whether to install an updater program
-install-updater = true
+install-updater = false
