--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,9 @@ clap = { version = "4.5.2", features = ["derive"] }
 open = "5.1.2"
 tokio = { version = "1.37.0", features = ["full", "net"] }
 tokio-modbus = "0.11.0"
+reqwest = { version = "0.12.4", features = ["json"] }
+serde_json = "1.0.117"
+serde = { version = "1.0.202", features = ["derive"] }
 
 # The profile that 'cargo dist' will build with
 [profile.dist]
