--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ tokio-modbus = "0.11.0"
 reqwest = { version = "0.12.4", features = ["json"] }
 serde_json = "1.0.117"
 serde = { version = "1.0.202", features = ["derive"] }
+colored = "2.1.0"
 
 # The profile that 'cargo dist' will build with
 [profile.dist]
