--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,6 @@ version = "0.0.7"
 edition = "2021"
 
 [dependencies]
-gateway-client = { version = "0.1.0", path = "gateway-client" }
 hftwo = "0.1.2"
 uftwo = "0.1.0"
 anyhow = "1.0.81"
@@ -20,14 +19,12 @@ reqwest = { version = "0.12.4", features = ["json"] }
 serde_json = "1.0.117"
 serde = { version = "1.0.202", features = ["derive"] }
 colored = "2.1.0"
+tokio-modbus = "0.14.0"
 
 # The profile that 'cargo dist' will build with
 [profile.dist]
 inherits = "release"
 lto = "thin"
-
-[workspace]
-members = ["gateway-client"]
 
 # Config for 'cargo dist'
 [workspace.metadata.dist]
