--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,6 +42,7 @@ targets = [
     "x86_64-apple-darwin",
     "x86_64-unknown-linux-gnu",
     "x86_64-pc-windows-msvc",
+    "aarch64-unknown-linux-gnu",
 ]
 # Publish jobs to run in CI
 publish-jobs = ["homebrew"]
