--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ lto = "thin"
 
 # Config for 'cargo dist'
 [workspace.metadata.dist]
+dist = true
 # The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
 cargo-dist-version = "0.14.1"
 # CI backends to support
